Fixed CSS conflicts. Namespacing should work as intended.

--- a/source/public/stylesheets/style.css
+++ b/source/public/stylesheets/style.css
@@ -65,7 +65,9 @@ button {
 
 
  /*SCATTERPLOT CSS*/
-.axis path,
+
+
+#scatter path,
 .axis line {
     fill: none;
     stroke: black;
